developer/src/kmc-package/test/fixtures/invalid/followkeyboardversion.empty.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Options>
    <ExecuteProgram></ExecuteProgram>
    <ReadMeFile></ReadMeFile>
    <GraphicFile></GraphicFile>
    <MSIFileName></MSIFileName>
    <MSIOptions></MSIOptions>
    <FollowKeyboardVersion/>
  </Options>
  <StartMenu>
    <Folder></Folder>
    <Items/>
  </StartMenu>
  <Info>
    <Name URL="">FollowKeyboardVersion with no keyboards</Name>
  </Info>
  <Files>
  </Files>
</Package>
